--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-APP_DB=mongodb://localhost:27017/node-auth
-APP_SECRET=qwertyuiop
-APP_PORT=5000
+APP_DB=YOUR_DB_PATH
+APP_SECRET=APP_SECRET_FOR_JWT_TOKEN
+APP_PORT=APP_PORT_TO_RUN_THE_PROGRAM
